--- a/.github/workflows/main_user-stories-api.yml
+++ b/.github/workflows/main_user-stories-api.yml
@@ -1,16 +1,12 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - user-stories
+name: Build and deploy Node.js app to Azure Web App - User-Stories-API
 
 on:
   push:
     branches:
       - main
-    paths-ignore:
-      - 'README.md'
-      - '.husky'
-      - '**/*.csv'
   workflow_dispatch:
 
 jobs:
@@ -25,16 +21,42 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: yarn install, build
+      - name: npm install, build, and test
         run: |
-          yarn install
-          yarn run build:api
-      
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v3
+        with:
+          name: node-app
+          path: release.zip
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: 'user-stories'
+          app-name: 'User-Stories-API'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_32505FB5589D4210B9ED2D723F5CED1A }}
           package: .
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
