--- a/.github/workflows/main_user-stories-api.yml
+++ b/.github/workflows/main_user-stories-api.yml
@@ -1,15 +1,12 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - User-Stories-API 
+name: Build and deploy Node.js app to Azure Web App - User-Stories-API
 
 on:
   push:
     branches:
       - main
-    paths-ignore:
-      - '.husky'
-      - '**/*.csv'
   workflow_dispatch:
 
 jobs:
@@ -24,10 +21,36 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: yarn install, build
+      - name: npm install, build, and test
         run: |
-          yarn install
-          yarn run build:api
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: release.zip
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -36,4 +59,4 @@ jobs:
           app-name: 'User-Stories-API'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_32505FB5589D4210B9ED2D723F5CED1A }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DDE58759944B4EC4A5203A476E19F0F0 }}
